[gd_scene load_steps=9 format=2]

[ext_resource path="res://templates/Enemy/Enemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://objects/GunBot/enemy_gun-bot.png" type="Texture" id=2]
[ext_resource path="res://objects/GunBot/GunBot.gd" type="Script" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 16, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 0, 32, 16, 32 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=5]
radius = 106.075

[node name="GunBot" instance=ExtResource( 1 )]
collision_layer = 4
collision_mask = 0
script = ExtResource( 3 )

[node name="AnimatedSprite" parent="." index="0"]
frames = SubResource( 4 )
frame = 1
playing = true

[node name="Timer" type="Timer" parent="." index="2"]
wait_time = 0.5
one_shot = true

[node name="ShootingRange" type="Area2D" parent="." index="3"]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="ShootingRange" index="0"]
shape = SubResource( 5 )
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="ShootingRange" to="." method="_on_ShootingRange_body_entered"]
[connection signal="body_exited" from="ShootingRange" to="." method="_on_ShootingRange_body_exited"]
